# learning-rust

./: Cargo.toml  README.md
assets/: theme.css
public/: base.html  index.html
public/data/: index.html  todo.html
public/error/: error.html
src/: main.rs  templates.rs
src/configuration/: settings.rs
src/viewmodels/: database_connect.rs  get_data.rs
