[package]
name = "askama-axum-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.37.0", features = ["full"] }
askama = { version = "0.12.1" }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
tower-http = { version = "0.3.5", features = ["fs"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.115"
